// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Signup /> calls the submit handler when button is clicked 1`] = `
<div>
  <div>
    <form
      data-testid="form"
    >
      <div
        class="AuthFormStyles-js87jd-0 ieHHDD"
      >
        <div
          id="authentication-form"
        >
          <div
            id="form-body"
          >
            <h1
              id="form-header"
            >
              Sign Up For Free
            </h1>
            <label
              for="username"
            >
              Username
            </label>
            <input
              autocomplete="username"
              class="auth-form-input"
              name="username"
              placeholder="Username"
              required=""
              type="text"
              value=""
            />
            <label
              for="phoneNumber"
            >
              Telephone
            </label>
            <input
              autocomplete="tel"
              class="auth-form-input"
              name="phoneNumber"
              placeholder="Phone Number"
              required=""
              type="number"
              value="phoneNumber"
            />
            <label
              for="email"
            >
              Email
            </label>
            <input
              autocomplete="email"
              class="auth-form-input"
              name="email"
              placeholder="Email"
              required=""
              type="email"
              value="email@gmail.com"
            />
            <label
              for="password"
            >
              Password
            </label>
            <input
              autocomplete="current-password"
              class="auth-form-input"
              name="password"
              placeholder="Password"
              required=""
              type="password"
              value="password"
            />
            <div
              id="action-button-container"
            >
              <button
                id="sign-up-button"
                type="submit"
              >
                Sign Up
              </button>
              <span
                id="forgot-password"
              >
                <a
                  href="/forgotpassword"
                >
                  Forgot Password?
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Signup /> renders an empty form 1`] = `
<div>
  <div>
    <form
      data-testid="form"
    >
      <div
        class="AuthFormStyles-js87jd-0 ieHHDD"
      >
        <div
          id="authentication-form"
        >
          <div
            id="form-body"
          >
            <h1
              id="form-header"
            >
              Sign Up For Free
            </h1>
            <label
              for="username"
            >
              Username
            </label>
            <input
              autocomplete="username"
              class="auth-form-input"
              name="username"
              placeholder="Username"
              required=""
              type="text"
              value=""
            />
            <label
              for="phoneNumber"
            >
              Telephone
            </label>
            <input
              autocomplete="tel"
              class="auth-form-input"
              name="phoneNumber"
              placeholder="Phone Number"
              required=""
              type="number"
              value=""
            />
            <label
              for="email"
            >
              Email
            </label>
            <input
              autocomplete="email"
              class="auth-form-input"
              name="email"
              placeholder="Email"
              required=""
              type="email"
              value=""
            />
            <label
              for="password"
            >
              Password
            </label>
            <input
              autocomplete="current-password"
              class="auth-form-input"
              name="password"
              placeholder="Password"
              required=""
              type="password"
              value=""
            />
            <div
              id="action-button-container"
            >
              <button
                id="sign-up-button"
                type="submit"
              >
                Sign Up
              </button>
              <span
                id="forgot-password"
              >
                <a
                  href="/forgotpassword"
                >
                  Forgot Password?
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Signup /> renders text in the form input 1`] = `
<div>
  <div>
    <form
      data-testid="form"
    >
      <div
        class="AuthFormStyles-js87jd-0 ieHHDD"
      >
        <div
          id="authentication-form"
        >
          <div
            id="form-body"
          >
            <h1
              id="form-header"
            >
              Sign Up For Free
            </h1>
            <label
              for="username"
            >
              Username
            </label>
            <input
              autocomplete="username"
              class="auth-form-input"
              name="username"
              placeholder="Username"
              required=""
              type="text"
              value=""
            />
            <label
              for="phoneNumber"
            >
              Telephone
            </label>
            <input
              autocomplete="tel"
              class="auth-form-input"
              name="phoneNumber"
              placeholder="Phone Number"
              required=""
              type="number"
              value="phoneNumber"
            />
            <label
              for="email"
            >
              Email
            </label>
            <input
              autocomplete="email"
              class="auth-form-input"
              name="email"
              placeholder="Email"
              required=""
              type="email"
              value="email@gmail.com"
            />
            <label
              for="password"
            >
              Password
            </label>
            <input
              autocomplete="current-password"
              class="auth-form-input"
              name="password"
              placeholder="Password"
              required=""
              type="password"
              value="password"
            />
            <div
              id="action-button-container"
            >
              <button
                id="sign-up-button"
                type="submit"
              >
                Sign Up
              </button>
              <span
                id="forgot-password"
              >
                <a
                  href="/forgotpassword"
                >
                  Forgot Password?
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
